unpackaged/objects/Kenshin_Import__c.object
<CustomObject>
    <fields>
        <fullName>Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Status__c</fullName>
        <label>Import Status</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Import_Date__c</fullName>
        <label>Last Import Date</label>
        <type>DateTime</type>
    </fields>
    <label>Kenshin Import</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Kenshin Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>